--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,12 +2,23 @@
     <div class="heading">
         <h1 class="title">Style Shelf</h1>
     </div>
-        <div class="navbar">
-            <ul class="nav-lists">
-                <li>item</li>
-                <li>style</li>
-                <li>wish list</li>
-                <li>brand collection</li>
-            </ul>
-        </div>
+
+    <ul class='lists'>
+    <% if user_signed_in? %>
+     <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+     <li><%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete }, class: "logout" %></li>
+     <% else %>
+     <li><%= link_to "Login", new_user_session_path, class: "login" %></li>
+     <li><%= link_to 'New', new_user_registration_path, class: "sign-up" %></li>
+     <% end %>
+    </ul>
 </header>
+
+<div class="top">
+<%= image_tag "top-img.png", class:"welcome-img" %>
+</div>
+
+<footer>
+<p>© Style Shelf</p>
+</footer>
+
