--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,21 +1,31 @@
 <header>
+
     <div class="heading">
-        <h1 class="title">Style Shelf</h1>
+       <h1 class="title">Style Shelf</h1>
+      <ul class="top">
+      <% if user_signed_in? %>
+        <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+        <li><%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete }, class: "logout" %></li>
+      <% else %>
+        <li><%= link_to "Login", new_user_session_path, class: "login" %></li>
+        <li><%= link_to 'New', new_user_registration_path, class: "sign-up" %></li>
+      <% end %>
+      </ul>
     </div>
 
-    <ul class='lists'>
-    <% if user_signed_in? %>
-     <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
-     <li><%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete }, class: "logout" %></li>
-     <% else %>
-     <li><%= link_to "Login", new_user_session_path, class: "login" %></li>
-     <li><%= link_to 'New', new_user_registration_path, class: "sign-up" %></li>
-     <% end %>
-    </ul>
+  <ul class="menu">
+    <li><a href="#">HOME</a></li>
+    <li><a href="#">CLOSET</a></li>
+    <li><a href="#">STYLE</a></li>
+    <li><a href="#">WISH LIST</a></li>
+  </ul>
+
+
 </header>
 
-<div class="top">
-<%= image_tag "top-img.png", class:"welcome-img" %>
+
+<div class="main">
+<%= image_tag "welcome.png", class:"welcome-img" %>
 </div>
 
 <footer>
