CLOSETページ導入

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -14,8 +14,8 @@
     </div>
 
   <ul class="menu">
-    <li><a href="#">HOME</a></li>
-    <li><a href="#">CLOSET</a></li>
+    <li><%= link_to "HOME", root_path %></li>
+    <li><%= link_to "CLOSET", closets_index_path %></li>
     <li><a href="#">STYLE</a></li>
     <li><a href="#">WISH LIST</a></li>
   </ul>
