--- a/app/assets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/user/login.css
@@ -25,26 +25,9 @@
     background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
-  }
-  
-  .second-fotter-text-wrap {
-    margin: 30px 0;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .second-fotter-text {
-    color: #333;
-    font-size: 12px;
-    margin: 0 10px;
-  }
-  
-  .second-fotter-logo {
-    width: 185px;
-    height: 49px;
-    margin: 0 auto;
-
-  }.second-header {
+  } 
+ 
+  .second-header {
     width: 100%;
     min-width: 800px;
     height: 130px;
@@ -54,8 +37,4 @@
     justify-content: center;
   }
   
-  .second-logo {
-    width: 185px;
-    height: 49px;
-  }
 
