--- a/app/views/closets/index.html.erb
+++ b/app/views/closets/index.html.erb
@@ -6,18 +6,32 @@
 
   <ul class="menu">
     <li><%= link_to "HOME", root_path %></li>
-    <li><%= link_to "CLOSET", closets_index_path %></li>
+    <li><%= link_to "CLOSET", closets_index_path,data: { turbo: false } %></li>
     <li><a href="#">STYLE</a></li>
     <li><a href="#">WISH LIST</a></li>
   </ul>
 
 </header>
 <%# 検索機能 %>
-<%= form_with model: @closet, url: closets_path, local: true do |f| %>
-<div class="form-group">
-    <%= f.collection_select :search_id, Search.all, :id, :name %>
+<div class="closet-search">
+<div class="search-form">
+    <div class="navbar">
+      <ul class="nav-lists">
+        <li class="background-red" id="lists">
+        <%= image_tag 'serch-icon.png',size: '20x20',class: "search-icon" %>
+        SEARCH
+        </li>
+      </ul>
+      <ul class="show-lists hidden" id="pull-down">
+        <li class="pull-down-list">Category</li>
+        <li class="pull-down-list">Size</li>
+        <li class="pull-down-list">Color</li>
+        <li class="pull-down-list">Season</li>
+      </ul>
+    </div>
 </div>
-<% end %>
+</div>
+
 <%# /検索機能 %>
 
 <%# アイテム一覧 %>
@@ -42,5 +56,5 @@
 
 <%= link_to(new_closet_path, class: 'purchase-btn',data: { turbo: false }) do %>
   <span class='purchase-btn-text'>登録</span>
-  <%= image_tag 'closet-btn.png',size: '110x110',class: "closet-icon" %>
+  <%= image_tag 'closet-btn.png',size: '110x110',class: "closet-btn" %>
 <% end %>
