--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -15,7 +15,7 @@
 
   <ul class="menu">
     <li><%= link_to "HOME", root_path %></li>
-    <li><%= link_to "CLOSET", closets_index_path %></li>
+    <li><%= link_to "CLOSET", closets_index_path, data: { turbo: false } %></li>
     <li><a href="#">STYLE</a></li>
     <li><a href="#">WISH LIST</a></li>
   </ul>
